--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ data/forecastings/*
 data/submissions/*
 data/additional_data/*
 data/processed/time_series_b.rds
+data/processed/stat_total_complete.rds
+data/processed/time_series_b_uncertainty.rds
